--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "node_fire_bird_n8n",
+  "name": "n8n-firebird-connector",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "An n8n node to connect and query Firebird databases",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Mateus Borges",
+  "license": "MIT",
+  "dependencies": {
+    "n8n-core": "^1.14.1",
+    "n8n-workflow": "^1.70.0",
+    "node-firebird": "^0.9.9"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0"
+  }
 }
