--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "n8n-firebird-connector",
+  "name": "n8n-node-firebird-connector",
   "version": "1.0.0",
   "description": "An n8n node to connect and query Firebird databases",
   "main": "dist/index.js",
